...
        ),
      );
    }
    rows.add(
      SwitchListTile(
        contentPadding: rowPadding,
        title: const Text('Vibration'),
        value: _vibrationEnabled,
        onChanged: _toggleVibration,
      ),
    );
    return rows;
  }
...
